--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index"
+    "start": "NODE_ENV=production node server",
+    "dev": "nodemon server"
   },
   "author": "",
   "license": "ISC",
@@ -14,13 +15,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.22",
     "path": "^0.12.7",
-    "rotating-file-stream": "^3.0.4",
     "transliteration": "^2.3.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
