--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -19,8 +19,5 @@
     "mongoose": "^6.8.3",
     "path": "^0.12.7",
     "transliteration": "^2.3.5"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.22"
   }
 }
