--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
+    "npm": "^9.6.5",
     "path": "^0.12.7",
     "transliteration": "^2.3.5"
   }
